<resources>
    <string name="app_name">Genius or stupid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">Acerca de</string>

    <string name="menu_home">Home</string>
    <string name="menu_game1">Simon Binario</string>
    <string name="menu_game2">Quiz!</string>
    <string name="menu_game2_1">Pregunta 1</string>
    <string name="menu_game2_2">Pregunta 2</string>
    <string name="menu_game2_3">Pregunta 3</string>
    <string name="menu_game2_4">Pregunta 4</string>
    <string name="menu_game2_5">Pregunta 5</string>
    <string name="menu_game2_6">Congrulations</string>
    <string name="menu_game2_7">Wrong</string>
    <string name="menu_about">Acerca de</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">Sing Up</string>
    <string name="loginhere">Al ready have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? <u>SingUp</u></string>

    <style name="ImageStyle" >
        <item name="android:minHeight">220dp</item>
        <item name="android:layout_marginTop">16dp</item>
        <item name="android:layout_marginBottom">8dp</item>
        <item name="android:layout_marginStart">16dp</item>
        <item name="android:layout_marginEnd">16dp</item>
        <item name="android:gravity">center</item>
        <item name="android:scaleType">fitCenter</item>
    </style>
    <style name="BigTextStyle" >
        <item name="android:textColor">@android:color/black</item>
        <item name="android:layout_marginTop">8dp</item>
        <item name="android:layout_marginBottom">8dp</item>
        <item name="android:layout_marginStart">16dp</item>
        <item name="android:layout_marginEnd">16dp</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">28sp</item>
    </style>
    <style name="ButtonStyle" >
        <item name="android:layout_marginBottom">40dp</item>
        <item name="android:layout_marginTop">18dp</item>
        <item name="android:paddingStart">10dp</item>
        <item name="android:paddingEnd">10dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#F5F3F0F0</item>
        <item name="android:shadowColor">#C9A776</item>
        <item name="android:background">#50B654</item>

    </style>
    <style name="MediumTextStyle" >
        <item name="android:textColor">#424242</item>
        <item name="android:layout_marginTop">8dp</item>
        <item name="android:layout_marginBottom">8dp</item>
        <item name="android:layout_marginStart">16dp</item>
        <item name="android:layout_marginEnd">16dp</item>
        <item name="android:gravity">left</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">21sp</item>
    </style>
</resources>